--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "dayjs": "^1.9.6",
     "leancloud-storage": "^4.8.0",
     "vue": "^3.0.0",
     "vue-demi": "^0.4.5"
