--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "dayjs": "^1.9.6",
-    "leancloud-storage": "^4.8.0"
+    "vue-demi": "^0.4.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -28,7 +28,6 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "vue": "^3.0.0",
-    "vue-demi": "^0.4.5",
     "vue-router": "^4.0.0-0"
   },
   "repository": {
